# pyuiua

./: .gitignore  Cargo.toml  LISCENCE  Makefile  README.md  pyproject.toml  pyuiua.pyi
.github/workflows/: CI.yml  build.yml  lint-and_test.yml  test.yml
example/: run_uiua.py
src/: api.rs  convert.rs  lib.rs  main.rs  uiua_eval.rs  uiua_runtime.rs
src/convert/: mod.rs  to_python.rs  to_uiua.rs
tests/: conftest.py  test_arrays.py  test_boxed.py  test_display.py  test_errors.py  test_eval.py  test_push_pop.py  test_scalars.py  test_stack.py  test_uiua.py
