[project]
name = "pyuiua"
version = "0.0.1"
description = "Python bindings for the Uiua programming language."
license = { file = "LICENSE" }
authors = [{ name = "Katie Gardner" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["uiua", "array-programming", "python-bindings", "interpreter"]
homepage = "https://github.com/KatieLG/pyuiua"
repository = "https://github.com/KatieLG/pyuiua"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed",
]

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["pyuiua.pyi", "py.typed"]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "maturin>=1.9",
    "ruff>=0.14.6",
    "ty>=0.0.1a27",
]

[tool.ruff]
line-length = 100
lint.select = ["B", "C4", "PLC", "F", "ANN", "I", "TID", "RET", "SIM"]
